--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<div data-type="Symbol" data-name="project-two" id="project_two" class="project_two">
 					<div data-type="Text" data-name="SHPE OC is a non-profit organization that builds networking opportunities, professional development, and community involvement.  SHPE also encourages college students in becoming mentors for the next generation of engineers and scientists.
 " id="SHPE_OC_is_a_non_profit_organi">
-						<span>SHPE OC is a non-profit organization that builds networking opportunities, professional development, and community involvement.  SHPE also encourages college students in becoming mentors for the next generation of engineers and scientists.</span><br>
+						<span>SHPE OC is a non-profit organization that builds networking opportunities, professional development, and community involvement, and encourages college students in becoming mentors for the next generation of engineers and scientists.</span><br>
 					</div>
 					<a href="https://www.shpeoc.net/" target="_blank" rel="noopener noreferrer">
 						<svg data-type="Rectangle" data-name="project-two-container" class="project_two_container">
@@ -201,20 +201,18 @@ JavaScript, HTML, CSS, Ruby, PHP" id="C_C____C___Java__Visual_Basic_">
 				</div>
 			</div>
 			<div data-type="Group" data-name="heading" id="heading">
-				<svg data-type="Rectangle" data-name="heading-container-dark" class="heading_container_dark">
-					<rect fill="rgba(255,255,255,1)" id="heading_container_dark" rx="30" ry="30" x="0" y="0" width="1210" height="419"></rect>
-				</svg>
-				<svg data-type="Rectangle" data-name="heading-container-light" class="heading_container_light">
-					<rect fill="rgba(255,255,255,1)" id="heading_container_light" rx="30" ry="30" x="0" y="0" width="1210" height="419"></rect>
-				</svg>
 				<div data-type="Text" data-name="heading-title" id="heading_title">
 					<span>SOFTWARE </span>
 					<span style="color:rgba(150,150,150,1);">&</span>
 					<span> WEB<br/> D E V E L O P E R </span>
 				</div>
 			</div>
-			<div data-type="Symbol" data-name="click-me-scroll" id="click_me_scroll" class="click_me_scroll">
+
+			<div data-type="Group" data-name="click-me-button" id="click_me_button">
 				<a href="#about">
+					<svg data-type="Rectangle" data-name="scroll-container" class="scroll_container">
+						<rect fill="rgba(255,255,255,1)" id="scroll_container" rx="0" ry="0" x="0" y="0" width="250" height="160"></rect>
+					</svg>
 					<svg data-type="Path" data-name="Icon ionic-ios-arrow-down" class="Icon_ionic_ios_arrow_down" viewBox="6.187 11.246 49.624 28.273">
 						<path fill="rgba(0,0,0,1)" id="Icon_ionic_ios_arrow_down" d="M 31.0087776184082 30.99669647216797 L 49.77248001098633 12.28442001342773 C 51.16128921508789 10.9005069732666 53.40702056884766 10.9005069732666 54.78105926513672 12.28442001342773 C 56.15509796142578 13.66833305358887 56.15509414672852 15.90615272521973 54.78105926513672 17.29006576538086 L 33.52045440673828 38.49044418334961 C 32.17596817016602 39.8301887512207 30.01887893676758 39.85963439941406 28.63007354736328 38.59350204467773 L 7.221719264984131 17.30478858947754 C 6.52731466293335 16.61283111572266 6.187499523162842 15.70003700256348 6.187499523162842 14.80196571350098 C 6.187499523162842 13.90389442443848 6.52731466293335 12.9911003112793 7.221719264984131 12.29914283752441 C 8.610528945922852 10.91522979736328 10.85626411437988 10.91522979736328 12.23029899597168 12.29914283752441 L 31.0087776184082 30.99669647216797 Z"></path>
 					</svg>
@@ -223,6 +221,5 @@ JavaScript, HTML, CSS, Ruby, PHP" id="C_C____C___Java__Visual_Basic_">
 					</div>
 				</a>
 			</div>
-		</div>
-	</body>
-</html>
+		</body>
+	</html>
