--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				</div>
 				<div data-type="Text" data-name="/ PROJECTS" id="__PROJECTS">
 					<span>/</span>
-					<span style="font-style:normal;font-weight:lighter;color:rgba(0,0,0,1);"> PROJECTS DEVELOPED</span>
+					<span style="font-style:normal;font-weight:lighter;color:rgba(0,0,0,1);"> PROJECTS</span>
 				</div>
 				<svg data-type="Line" data-name="project-line" class="project_line" viewBox="0 0 691.378 5">
 					<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="5px" stroke-linejoin="miter" stroke-linecap="round" stroke-miterlimit="4" shape-rendering="auto" id="project_line" d="M 691.3779296875 0 L 0 0"></path>
@@ -204,7 +204,7 @@ JavaScript, HTML, CSS, Ruby, PHP" id="C_C____C___Java__Visual_Basic_">
 				<div data-type="Text" data-name="heading-title" id="heading_title">
 					<span>SOFTWARE </span>
 					<span style="color:rgba(150,150,150,1);">&</span>
-					<span> WEB<br/> D E V E L O P E R </span>
+					<span> WEB<br/>  D E V E L O P E R </span>
 				</div>
 			</div>
 
