--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta http-equiv="X-UA-Compatible" content="ie=edge">
-            <meta name="author" content="harrnish">
 
             <title>quiyet brul</title>
 
@@ -33,7 +32,7 @@
                   <!--------------- navbar starts here --------------->
                         <nav>
                               <span id="brand">
-                                    <a href="index.html">kyoo</a>
+                                    <a href="#home">kyoo</a>
                               </span>
 
                               <ul id="menu">
